サインアップページのビューを変更

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,12 @@
-<h2>Sign up</h2>
+<h2>ユーザー登録</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
+
+  <div class="field">
+    <%= f.label "ニックネーム" %><br />
+    <%= f.email_field :nickname, autofocus: true, autocomplete: "nickname" %>
+  </div>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -9,20 +14,19 @@
   </div>
 
   <div class="field">
-    <%= f.label :password %>
+    <%= f.label "パスワード(6文字以内)" %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
   </div>
 
   <div class="field">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label "パスワード(再入力)" %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "目標を設定する" %>
   </div>
 <% end %>
 
