--- a/app/views/targets/new.html.erb
+++ b/app/views/targets/new.html.erb
@@ -1,19 +1,21 @@
 <h2>目標設定</h2>
 
-<%= form_with model: @target, url: hoge, local: true do |f| %>
+<%= form_with model: @target, url: root_path, local: true do |f| %>
   <div class="field">
-    いくら貯めますか?
-    <%= f.text_area :max_hp, placeholder: "1000000" %>円
+    <div class="message">
+      いくら貯めますか?
+    </div>
+    <%= f.text_field :max_hp, placeholder: "1000000" %>円
   </div>
 
   <div class="field">
-    いつまでに貯めますか?
-    <%= f.text_area :max_mp, placeholder: "100" %>日
+    <div class="message">
+      いつまでに貯めますか?
+    </div>
+    <%= f.text_field :max_mp, placeholder: "100" %>日
   </div>
 
   <div class="actions">
     <%= f.submit "1日に使える金額を決めよう" %>
   </div>
 <% end %>
-
-<%= link_to "ユーザー登録ページに戻る", new_registration_path(resource_name) %><br />
