createアクションを定義(targets)

--- a/app/views/targets/new.html.erb
+++ b/app/views/targets/new.html.erb
@@ -1,6 +1,6 @@
 <h2>目標設定</h2>
 
-<%= form_with model: @target, url: root_path, local: true do |f| %>
+<%= form_with model: @target, url: targets_path, local: true do |f| %>
   <div class="field">
     <div class="message">
       いくら貯めますか?
