budgets/new.html.erbの整形

--- a/app/views/budgets/new.html.erb
+++ b/app/views/budgets/new.html.erb
@@ -1,1 +1,18 @@
 <h2>収支入力</h2>
+<%= form_with model: @budget, url: target_budgets_path, local: true do |f| %>
+  <div class="field">
+    <div class="message">
+      先月の収入を入力してください
+    </div>
+    <%= f.text_field :attack_base, placeholder: "200000" %>円
+  </div>
+  <div class="field">
+    <div class="message">
+      先月の固定費を入力してください
+    </div>
+    <%= f.text_field :resist_base, placeholder: "80000" %>日
+  </div>
+  <div class="actions">
+    <%= f.submit "戦闘開始!" %>
+  </div>
+<% end %>
