destroyアクションを定義(target)

--- a/app/views/budgets/new.html.erb
+++ b/app/views/budgets/new.html.erb
@@ -16,3 +16,4 @@
     <%= f.submit "戦闘開始!" %>
   </div>
 <% end %>
+<%= link_to "目標を設定し直す※ブラウザの「戻る」は使用しないでください", target_path(@target.id), method: :delete %>
